fixed alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,13 +46,13 @@ body {
 }
 
 .left-col {
-	flex: 2 1 50%;
+	flex: 1 1 50%;
 	min-width: 300px;
 }
 
 .right-col {
-	flex: 1 1 30%;
-	min-width: 150px;
+	flex: 1 1 35%;
+	min-width: 250px;
 	box-sizing: border-box;
 }
 
@@ -95,11 +95,15 @@ body {
 	white-space: pre;
 	box-sizing: border-box;
 	top: 20px;
+	max-width: 100%;
+	overflow-x: auto;
+	text-align: right;
+	text-indent: 0;
 }
 
 .man-page {
 	text-align: right;
-	line-height: 35px;
+	line-height: 30px;
 }
 
 .man-title {
